--- a/config/main.yaml
+++ b/config/main.yaml
@@ -9,6 +9,6 @@ defaults:
   - _self_
 
 data:
-  raw: data/raw/sample.csv
+  raw: data/raw/Fish.csv
   processed: data/processed/processed.csv
-  final: data/final/final.csv
+  final: data/final/target.csv
